<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/14 17:06
 */

namespace DesignPatterns\Structural\Facade;

class Alarm
{
    public function activate()
    {

    }

    public function deactivate()
    {

    }

    public function ring()
    {

    }

    public function stopRing()
    {

    }
}
