<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/14 17:03
 */

namespace DesignPatterns\Structural\Facade;

class Camera
{
    public function turnOn()
    {

    }

    public function turnOff()
    {

    }

    public function rotate($degrees)
    {

    }
}
