<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/14 17:05
 */

namespace DesignPatterns\Structural\Facade;

class Sensor
{
    public function activate()
    {

    }

    public function deactivate()
    {

    }

    public function trigger()
    {

    }
}
